💄 Declared and documented organizations related endpoints
