# model/organization.go
@@ -1,11 +1,10 @@
 package model
 
 type OrganizationCreate struct {
-	OrganizationID int64   `json:"organization_id"`
-	Name           string  `json:"name"`
-	Address        *string `json:"address,omitempty"`
-	ContactEmail   *string `json:"contact_email,omitempty"`
-	ContactPhone   *string `json:"contact_phone,omitempty"`
+	Name         string  `json:"name" example:"Российский технологический университет МИРЭА"`
+	Address      *string `json:"address,omitempty" example:"Г. Москва, Пр-т. Вернадского 78"`
+	ContactEmail *string `json:"contact_email,omitempty" example:"contact@mirea.ru"`
+	ContactPhone *string `json:"contact_phone,omitempty" example:"74992156565"`
 }
 
 type Organization struct {
@@ -14,6 +13,21 @@ type Organization struct {
 	Address        *string `json:"address,omitempty"`
 	ContactEmail   *string `json:"contact_email,omitempty"`
 	ContactPhone   *string `json:"contact_phone,omitempty"`
+}
+
+type OrganizationGet struct {
+	OrganizationID int64   `json:"organization_id" example:"1"`
+	Name           string  `json:"name" example:"Российский технологический университет МИРЭА"`
+	Address        *string `json:"address,omitempty" example:"Г. Москва, Пр-т. Вернадского 78"`
+	ContactEmail   *string `json:"contact_email,omitempty" example:"contact@mirea.ru"`
+	ContactPhone   *string `json:"contact_phone,omitempty" example:"74992156565"`
+}
+
+type OrganizationUpdate struct {
+	Name         *string `json:"name" example:"Российский технологический университет МИРЭА"`
+	Address      *string `json:"address,omitempty" example:"Г. Москва, Пр-т. Вернадского 78"`
+	ContactEmail *string `json:"contact_email,omitempty" example:"contact@mirea.ru"`
+	ContactPhone *string `json:"contact_phone,omitempty" example:"74992156565"`
 }
 
 type OrganizationMemberCreate struct {
